--- a/helm/helm-chart-mnestix-api/templates/service.yaml
+++ b/helm/helm-chart-mnestix-api/templates/service.yaml
@@ -1,15 +1,16 @@
+# templates/service.yaml
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-service
+  name: {{ include "mnestix-api.fullname" . }}
   labels:
-    app: {{ .Chart.Name }}
+    {{- include "mnestix-api.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
   ports:
-    - port: 80
-      targetPort: 3000
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.port }}
       protocol: TCP
       name: http
   selector:
-    app: {{ .Chart.Name }}
+    {{- include "mnestix-api.selectorLabels" . | nindent 4 }}
