--- a/helm/helm-chart-mnestix-api/values.yaml
+++ b/helm/helm-chart-mnestix-api/values.yaml
@@ -1,35 +1,55 @@
 # values.yaml
 
+replicaCount: 1
+
 image:
   repository: mnestix/mnestix-api
+  pullPolicy: IfNotPresent
   tag: latest
 
 service:
-  port: 5064
   type: ClusterIP
-
-ingress:
-  enable: false
+  port: 5064
 
 env:
-  CustomerEndpointsSecurity__ApiKey: ${MNESTIX_BACKEND_API_KEY}
-  ReverseProxy__Clusters__repoCluster__Destinations__destination1__Address: 'http://aas-aas-environment:8080/'
-  ReverseProxy__Clusters__discoveryCluster__Destinations__destination1__Address: 'http://aas-aas-discovery:8080/'
+  # Application Settings
+  # API Key:
+  CustomerEndpointsSecurity__ApiKey: "" # Provide the actual API key
+  # Connection to Repository Service:
+  ReverseProxy__Clusters__repoCluster__Destinations__destination1__Address: 'https://aas.my.yacoub.de/api'
+  ReverseProxy__Clusters__discoveryCluster__Destinations__destination1__Address: 'https://aas.my.yacoub.de/api/discovery'
+  # Features Configuration
   Features__AasRegistryMiddleware: true
-  Features__UseMongoDbBasedAasIdStorage: true
   Features__AllowRetrievingAllShellsAndSubmodels: true
   Features__UseAuthentication: false
-  ReverseProxy__Clusters__influxCluster__Destinations__destination1__Address: 'http://example/'
-  ReverseProxy__Routes__InfluxRoute__Transforms__1__Set: 'Token '
-  BasyxDbConnectionConfiguration__MongoConnectionString: 'mongodb://mongoAdmin:mongoPassword@mongodb:27017/?authSource=admin'
-  BasyxDbConnectionConfiguration__DatabaseName: basyxdb
+  Features__UseMongoDbBasedAasIdStorage: true
+  # InfluxDB Configuration
+  # URL to specify the host and port where InfluxDB is running:
+  # ReverseProxy__Clusters__influxCluster__Destinations__destination1__Address: 'http://example/'
+  # Token:
+  # ReverseProxy__Routes__InfluxRoute__Transforms__1__Set: 'Token '
+  # MongoDB Configuration
+  BasyxDbConnectionConfiguration__MongoConnectionString: 'mongodb://adminUser:adminPassword@mongodb:27017'
+  BasyxDbConnectionConfiguration__DatabaseName: aas-env
   BasyxDbConnectionConfiguration__AasCollectionName: 'aas-repo'
-  BasyxDbConnectionConfiguration__LookupServiceCollectionName: lookupservice
-  AzureAd__Domain: 'mnestixtest.onmicrosoft.com'
-  AzureAd__TenantId: 6c4ccecf-2dd4-4241-b7fc-6e95b32dcfac
-  AzureAd__ClientId: ffade4c2-76c8-44fd-9258-743d9cfc2289
+  # BasyxDbConnectionConfiguration__LookupServiceCollectionName: lookupservice
+  # Microsoft Authentication and Authorization Configuration:
+  AzureAd__Domain: 'my.yacoub.de'
+  AzureAd__TenantId: 'd4a311d7-79ce-4521-9fb4-7a556b4f997d'
+  AzureAd__ClientId: '25dbf051-5d0d-4f75-b896-d0ced8c2dc45'
+  # ASP.NET Core URLs
   ASPNETCORE_URLS: 'http://+:5064'
 
-dependencies:
-  aas-aas-environment:
-    condition: service_healthy
+resources: {}
+nodeSelector: {}
+tolerations: []
+affinity: []
+ingress:
+  enabled: true
+  annotations: {}
+  hosts:
+    - host: backend-api.my.yacoub.de
+      paths:
+        - path: /
+          pathType: Prefix
+  tls: []
