--- a/helm/helm-chart-mnestix-browser/templates/service.yaml
+++ b/helm/helm-chart-mnestix-browser/templates/service.yaml
@@ -1,15 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-service
+  name: {{ include "mnestix-frontend.fullname" . }}
   labels:
-    app: {{ .Chart.Name }}
+    app: {{ include "mnestix-frontend.name" . }}
+    chart: {{ include "mnestix-frontend.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: 80
+    - port: {{ .Values.service.port }}
       targetPort: 3000
       protocol: TCP
       name: http
   selector:
-    app: {{ .Chart.Name }}
+    app: {{ include "mnestix-frontend.name" . }}
+    release: {{ .Release.Name }}
