--- a/helm/helm-chart-mnestix-browser/values.yaml
+++ b/helm/helm-chart-mnestix-browser/values.yaml
@@ -8,22 +8,21 @@ image:
   repository: mnestix/mnestix-browser
   pullPolicy: IfNotPresent
   tag: latest
-  pullSecrets: []
 
 # Kubernetes Service settings
 service:
-  type: LoadBalancer
-  port: 80
+  type: ClusterIP
+  port: 3000
 
 # Ingress settings for exposing the service (optional)
-# ingress:
-#   enabled: false
-#   annotations: {}
-#   hosts:
-#     - host: chart-example.local
-#       paths:
-#         - /
-#   tls: []
+ingress:
+  enabled: true
+  annotations: {}
+  hosts:
+    - host: mnestix.my.yacoub.de
+      paths:
+        - /
+  tls: []
 
 # Resource requests and limits for the application pods
 resources:
@@ -51,18 +50,18 @@ tolerations: []
 affinity: {}
 
 # Enable ingress for release name
-ingress:
-  enabled: true
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+# ingress:
+#   enabled: true
+#   annotations:
+#     nginx.ingress.kubernetes.io/rewrite-target: /
 
 env:
-  REGISTRY_API_URL: 'http://localhost:8083'
-  DISCOVERY_API_URL: 'http://mnestix-api-service:31323/discovery'
-  AAS_REPO_API_URL: 'http://mnestix-api-service:31323/repo'
-  MNESTIX_BACKEND_API_URL: 'http://mnestix-api-service:31323'
-  AD_CLIENT_ID: ${AD_CLIENT_ID}
-  AD_TENANT_ID: ${AD_TENANT_ID}
+  REGISTRY_API_URL: 'http://aas.my.yacoub.de//api/aas-registry:8083'
+  DISCOVERY_API_URL: 'http://aas.my.yacoub.de//api/discovery'
+  AAS_REPO_API_URL: 'http://aas.my.yacoub.de/api'
+  MNESTIX_BACKEND_API_URL: 'http://backend-api.my.yacoub.de'
+  AD_CLIENT_ID: '25dbf051-5d0d-4f75-b896-d0ced8c2dc45'
+  AD_TENANT_ID: 'd4a311d7-79ce-4521-9fb4-7a556b4f997d'
   APPLICATION_ID_URI: 'api://mnestix-test-web-api/'
   AAS_LIST_FEATURE_FLAG: true
   COMPARISON_FEATURE_FLAG: true
