change loadbalancer to cluster ip

--- a/helm/helm-chart-mnestix-browser/values-main.yaml
+++ b/helm/helm-chart-mnestix-browser/values-main.yaml
@@ -12,7 +12,7 @@ image:
 
 # Kubernetes Service settings
 service:
-  type: LoadBalancer
+  type: ClusterIP
   port: 80
 
 # Ingress settings for exposing the service (optional)
