--- a/.env.local
+++ b/.env.local
@@ -1,13 +1,16 @@
+REGISTRY_API_URL: 'https://aas.my.murrelektronik.de/api/aas-registry'
+DISCOVERY_API_URL: 'https://aas.my.murrelektronik.de/api/discovery'
+AAS_REPO_API_URL: 'https://aas.my.murrelektronik.com/api'
+# MNESTIX_BACKEND_API_URL: 'http://localhost:8089'
+MNESTIX_BACKEND_API_URL: 'https://aasmgmt.aas.my.yacoub.de'
+# AD_CLIENT_ID: ${AD_CLIENT_ID}
+# AD_TENANT_ID: ${AD_TENANT_ID}
 APPLICATION_ID_URI: 'api://mnestix-test-web-api/'
-LOCK_TIMESERIES_PERIOD_FEATURE_FLAG: true
-AUTHENTICATION_FEATURE_FLAG: true
-COMPARISON_FEATURE_FLAG: true
 AAS_LIST_FEATURE_FLAG: true
-# AAS_REPO_API_URL: 'http://localhost:5064/repo'
-# MNESTIX_BACKEND_API_URL: 'http://localhost:5064'
-# DISCOVERY_API_URL: 'http://localhost:5064/discovery'
-REGISTRY_API_URL: 'http://localhost:8083'
-THEME_LOGO_MIME_TYPE: 'image/svg+xml'
-THEME_PRIMARY_COLOR: '#0d4453'
-THEME_SECONDARY_COLOR: '#147f8a'
-THEME_LOGO_URL: https://xitaso.com/wp-content/uploads/XITASO-Logo-quer.svg
+COMPARISON_FEATURE_FLAG: true
+AUTHENTICATION_FEATURE_FLAG: true
+LOCK_TIMESERIES_PERIOD_FEATURE_FLAG: true
+THEME_PRIMARY_COLOR: '#6EF688'
+THEME_SECONDARY_COLOR: '#3DB60F'
+#      THEME_LOGO_MIME_TYPE: 'image/svg+xml'
+THEME_LOGO_URL: '/images/murr-company-logo.png'
