--- a/helm/helm-chart-mnestix-browser/values-development.yaml
+++ b/helm/helm-chart-mnestix-browser/values-development.yaml
@@ -80,9 +80,9 @@ ingress:
       secretName: tls-secret
 
 env:
-  REGISTRY_API_URL: 'https://aas.my.murrelektronik.de/api/aas-registry'
-  DISCOVERY_API_URL: 'https://aas.my.murrelektronik.de/api/discovery'
-  AAS_REPO_API_URL: 'https://aas.my.murrelektronik.com/api'
+  REGISTRY_API_URL: 'https://aas.my.yacoub.de/api/aas-registry'
+  DISCOVERY_API_URL: 'https://aas.my.yacoub.de/api/discovery'
+  AAS_REPO_API_URL: 'https://aas.my.yacoub.de/api'
   MNESTIX_BACKEND_API_URL: 'https://aasmgmt.aas.my.yacoub.de/'
   AD_CLIENT_ID: ${AD_CLIENT_ID}
   AD_TENANT_ID: ${AD_TENANT_ID}
