--- a/helm/helm-chart-mnestix-browser/values-development.yaml
+++ b/helm/helm-chart-mnestix-browser/values-development.yaml
@@ -69,7 +69,7 @@ ingress:
   enabled: true
   ingressClassName: nginx
   annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-production
+    cert-manager.io/cluster-issuer: letsencrypt-staging
   hosts:
     - host: browser-dev.aas.my.yacoub.de
       paths:
@@ -77,7 +77,7 @@ ingress:
   tls:
     - hosts:
         - browser-dev.aas.my.yacoub.de
-      secretName: tls-secret
+      secretName: tls-secret-dev
 
 env:
   REGISTRY_API_URL: 'https://aas.my.yacoub.de/api/aas-registry'
