use prodution issuer

--- a/helm/helm-chart-mnestix-browser/values-development.yaml
+++ b/helm/helm-chart-mnestix-browser/values-development.yaml
@@ -69,7 +69,7 @@ ingress:
   enabled: true
   ingressClassName: nginx
   annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-staging
+    cert-manager.io/cluster-issuer: letsencrypt-production
   hosts:
     - host: browser-dev.aas.my.yacoub.de
       paths:
