adjust env local to yacoub

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
-REGISTRY_API_URL: 'https://aas.my.murrelektronik.de/api/aas-registry'
-DISCOVERY_API_URL: 'https://aas.my.murrelektronik.de/api/discovery'
-AAS_REPO_API_URL: 'https://aas.my.murrelektronik.com/api'
+REGISTRY_API_URL: 'https://aas.my.yacoub.de/api/aas-registry'
+DISCOVERY_API_URL: 'https://aas.my.yacoub.de/api/discovery'
+AAS_REPO_API_URL: 'https://aas.my.yacoub.de/api'
 # MNESTIX_BACKEND_API_URL: 'http://localhost:8089'
 MNESTIX_BACKEND_API_URL: 'https://aasmgmt.aas.my.yacoub.de'
 # AD_CLIENT_ID: ${AD_CLIENT_ID}
