ensure login successful

--- a/.github/workflows/cicd-development.yml
+++ b/.github/workflows/cicd-development.yml
@@ -37,6 +37,11 @@ jobs:
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+          enable-AzPSSession: true # ensures that the Azure CLI persists the session correctly for all subsequent az commands.
+
+      # Ensure login successful
+      - name: Verify Azure Login
+        run: az account show
 
       - name: Set Azure Defaults
         run: az configure --defaults acr=${{ env.AZURE_CONTAINER_REGISTRY }}
